# solana-nanocredit

./: .gitignore  Anchor.toml  CIVIC_PASS_ROADMAP.md  DEMO_IMPROVEMENTS.md  DEVELOPMENT.md  HACKATHON_MVP_PRD.md  HUMANITY_PROTOCOL_GRANT_PROPOSAL.md  Humanity+BLE_Backup.md  LINKEDIN_ARTICLE.md  MARKET_EXPANSION.md  README.md  package.json
app/: package-lock.json  package.json  server.js
app/src/app/: layout.tsx  page.tsx
app/src/app/api/socket/: route.ts
app/src/app/customer/: page.tsx
app/src/app/merchant/: page.tsx
app/src/lib/: socket.ts  socketClient.ts  solana.ts
docs/: ARCHITECTURE.md  CIVIC_PASS_INTEGRATION.md  DEMO_GUIDE.md
investment/: NanoCredit-Solana-Investor-Pitch.md
presentations/: PITCH_VIDEO.md  SUPERTEAM_PITCH.md  TECH_DEMO.md
programs/nanocredit/: Cargo.toml
programs/nanocredit/src/: lib.rs
programs/nanocredit/src/instructions/: approve_loan.rs  mod.rs  request_loan.rs  verify_identity.rs  verify_proximity.rs
programs/nanocredit/src/state/: customer.rs  loan.rs  mod.rs  proximity_proof.rs
research/: Kenya_Safaricom_Partnership_Strategy.md  Philippines_Market_Analysis.md  Research blockchain nano-lending projects competin.md
tests/: nanocredit.ts
