[package]
name = "nanocredit"
version = "0.1.0"
description = "BLE proximity-verified nano-lending on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nanocredit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# MVP mode: Skip identity verification (for hackathon/testing)
# Production mode: Require Civic Pass verification
mvp = []
default = ["mvp"]

[dependencies]
anchor-lang = "0.29.0"

